--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "alpinejs-scroll-to": "^1.1.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@alpinejs/anchor": "^3.14.8",
+        "alpinejs": "^3.14.8"
     }
 }
