Add Alpine.js collapse plugin; create new 'a' view and cover slider component; update main layout and dependencies

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
 				"ryannaddy.laravel-artisan",
 				"onecentlin.laravel5-snippets",
 				"onecentlin.laravel-blade",
-				"bradlc.vscode-tailwindcss"
+				"bradlc.vscode-tailwindcss",
+				"shufo.vscode-blade-formatter"
 			],
 			"settings": {}
 		}
