--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@alpinejs/anchor": "^3.14.8",
+        "@alpinejs/collapse": "^3.14.8",
         "alpinejs": "^3.14.8"
     }
 }
