--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@alpinejs/anchor": "^3.14.8",
         "@alpinejs/collapse": "^3.14.8",
-        "alpinejs": "^3.14.8"
+        "alpinejs": "^3.14.8",
+        "flowbite": "^2.5.2"
     }
 }
