Add glob package and refactor Vite config to dynamically include JS and CSS files

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@alpinejs/anchor": "^3.14.8",
         "@alpinejs/collapse": "^3.14.8",
         "alpinejs": "^3.14.8",
-        "flowbite": "^2.5.2"
+        "flowbite": "^2.5.2",
+        "glob": "^11.0.0"
     }
 }
